syntax = "proto3";

package infrastructure.api.rpc.tariff.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/billing/internal/infrastructure/tariff_rpc";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// Tariff
message Tariff {
  // FieldMask
  google.protobuf.FieldMask field_mask = 4;

  // ID of tariff
  string id = 1;
  // Name of tariff
  string name = 2;
  // Description of tariff
  string payload = 3;
}

// Tariff list
message Tariffs {
  // List of tariffs
  repeated Tariff list = 1;
}

// TariffService is the tariff service definition.
service TariffService {
  // Tariff returns tariff by id.
  rpc Tariff(TariffRequest) returns(TariffResponse) {}
  // Tariffs returns all tariffs.
  rpc Tariffs(google.protobuf.Empty) returns(TariffsResponse) {}
  // TariffCreate creates new tariff.
  rpc TariffCreate(TariffCreateRequest) returns(TariffCreateResponse) {}
  // TariffUpdate updates tariff.
  rpc TariffUpdate(TariffUpdateRequest) returns(TariffUpdateResponse) {}
  // TariffClose closes tariff.
  rpc TariffClose(TariffCloseRequest) returns(TariffCloseResponse) {}
}

// TariffRequest is the tariff request message.
message TariffRequest {
  // Tariff is the tariff.
  Tariff tariff = 1;
}

// TariffResponse is the tariff response message.
message TariffResponse {
  // Tariff is the tariff.
  Tariff tariff = 1;
}

// TariffsResponse is the tariffs response message.
message TariffsResponse {
  // Tariff is the tariff.
  repeated Tariff list = 1;
}

// TariffCreateRequest is the tariff create request message.
message TariffCreateRequest {
  // Tariff is the tariff.
  Tariff tariff = 1;
}

// TariffCreateResponse is the tariff create response message.
message TariffCreateResponse {
  // Tariff is the tariff.
  Tariff tariff = 1;
}

// TariffUpdateRequest is the tariff update request message.
message TariffUpdateRequest {
  // Tariff is the tariff.
  Tariff tariff = 1;
}

// TariffUpdateResponse is the tariff update response message.
message TariffUpdateResponse {
  // Tariff is the tariff.
  Tariff tariff = 1;
}

// TariffCloseRequest is the tariff close request message.
message TariffCloseRequest {
  // Tariff is the tariff.
  Tariff tariff = 1;
}

// TariffCloseResponse is the tariff close response message.
message TariffCloseResponse {
  // Tariff is the tariff.
  Tariff tariff = 1;
}
